apache/service.yaml
# Points to Apache running on the host
apiVersion: v1
kind: Service
metadata:
  name: apache-external
spec:
  ports:
    - port: 8080
      targetPort: 8080
