apache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-passthrough
spec:
  rules:
    - host: danilenko.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-external
                port:
                  number: 8080
